Closed Bug 851887 Opened 13 years ago Closed 13 years ago

crash in nsWindowSH::GlobalScopePolluterNewResolve

Categories

(Core :: DOM: Core & HTML, defect)

22 Branch
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla22
Tracking Status
firefox21 --- unaffected
firefox22 - verified

People

(Reporter: hidenosuke, Unassigned)

References

Details

(4 keywords)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-5cc6e1c6-af83-402f-93e8-1f4152130317 . ============================================================= Steps to reproduce: 1. Open https://plus.google.com/. You may need to login Google+. 2. Open http://www.phoronix.com/scan.php?page=home . Actual result: Firefox crashes. From Trouble shooting information: Application Basics Name Firefox Version 22.0a1 User Agent Mozilla/5.0 (X11; Linux x86_64; rv:22.0) Gecko/20130316 Firefox/22.0 Build Configuration about:buildconfig Extensions Name Version Enabled ID Config Descriptions 1.0 true {1823e248-6bf4-f6f1-7901-65a68e8b6c1e} Cookie Monster 1.1.0 true {45d8ff86-d909-11db-9705-005056c00008} Google Documents Viewer 0.10.1 true jid0-BRAJAX3fUCLqytnbXp3pcmBpMK8@jetpack Print Edit 9.0 true printedit@DW-dev User Agent RG 1.0 true useragentrg@mozilla.org Adblock Plus 2.2.3 false {d10d0bf8-f5b5-c8b4-a8b2-2b9879e08c5d} Important Modified Preferences Name Value accessibility.typeaheadfind.flashBar 0 browser.cache.disk.capacity 1048576 browser.cache.disk.smart_size.first_run false browser.cache.disk.smart_size.use_old_max false browser.cache.disk.smart_size_cached_value 358400 browser.places.smartBookmarksVersion 4 browser.search.openintab true browser.startup.homepage about:home browser.startup.homepage_override.buildID 20130316160554 browser.startup.homepage_override.mstone 22.0a1 browser.tabs.warnOnClose false dom.mozApps.used true extensions.lastAppVersion 22.0a1 font.default.x-western sans-serif font.language.group ja font.name.serif.x-western sans-serif layers.acceleration.force-enabled true layers.force-active true network.cookie.cookieBehavior 1 network.cookie.prefsMigrated true places.database.lastMaintenance 1363488535 places.history.expiration.transient_current_max_pages 104858 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_colorspace false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_downloadfonts false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_jobtitle false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_num_copies true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_orientation true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_paper_size true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_plex false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_printincolor true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_resolution false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.can_change_spoolercommand false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.colorspace.0.name default print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.colorspace.count 1 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.has_special_printerfeatures true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.orientation.0.name portrait print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.orientation.1.name landscape print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.orientation.count 2 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.0.height_mm 210 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.0.is_inch false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.0.name A5 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.0.width_mm 148 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.1.height_mm 297 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.1.is_inch false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.1.name A4 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.1.width_mm 210 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.2.height_mm 420 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.2.is_inch false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.2.name A3 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.2.width_mm 297 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.3.height_mm 279 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.3.is_inch true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.3.name Letter print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.3.width_mm 215 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.4.height_mm 355 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.4.is_inch true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.4.name Legal print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.4.width_mm 215 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.5.height_mm 431 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.5.is_inch true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.5.name Tabloid print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.5.width_mm 279 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.6.height_mm 254 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.6.is_inch true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.6.name Executive print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.6.width_mm 190 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.paper.count 7 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.plex.0.name default print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.plex.count 1 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.resolution.0.name default print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.resolution.count 1 print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.supports_colorspace_change false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.supports_downloadfonts_change false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.supports_jobtitle_change false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.supports_orientation_change true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.supports_paper_size_change true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.supports_plex_change false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.supports_printincolor_change true print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.supports_resolution_change false print.tmp.printerfeatures.CUPS/EPSON_EP-805A_Series.supports_spoolercommand_change false print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_colorspace false print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_downloadfonts false print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_jobtitle false print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_num_copies true print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_orientation true print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_paper_size true print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_plex false print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_printincolor true print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_resolution false print.tmp.printerfeatures.EPSON_EP-805A_Series.can_change_spoolercommand false print.tmp.printerfeatures.EPSON_EP-805A_Series.colorspace.0.name default print.tmp.printerfeatures.EPSON_EP-805A_Series.colorspace.count 1 print.tmp.printerfeatures.EPSON_EP-805A_Series.has_special_printerfeatures true print.tmp.printerfeatures.EPSON_EP-805A_Series.orientation.0.name portrait print.tmp.printerfeatures.EPSON_EP-805A_Series.orientation.1.name landscape print.tmp.printerfeatures.EPSON_EP-805A_Series.orientation.count 2 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.0.height_mm 210 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.0.is_inch false print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.0.name A5 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.0.width_mm 148 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.1.height_mm 297 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.1.is_inch false print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.1.name A4 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.1.width_mm 210 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.2.height_mm 420 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.2.is_inch false print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.2.name A3 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.2.width_mm 297 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.3.height_mm 279 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.3.is_inch true print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.3.name Letter print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.3.width_mm 215 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.4.height_mm 355 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.4.is_inch true print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.4.name Legal print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.4.width_mm 215 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.5.height_mm 431 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.5.is_inch true print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.5.name Tabloid print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.5.width_mm 279 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.6.height_mm 254 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.6.is_inch true print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.6.name Executive print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.6.width_mm 190 print.tmp.printerfeatures.EPSON_EP-805A_Series.paper.count 7 print.tmp.printerfeatures.EPSON_EP-805A_Series.plex.0.name default print.tmp.printerfeatures.EPSON_EP-805A_Series.plex.count 1 print.tmp.printerfeatures.EPSON_EP-805A_Series.resolution.0.name default print.tmp.printerfeatures.EPSON_EP-805A_Series.resolution.count 1 print.tmp.printerfeatures.EPSON_EP-805A_Series.supports_colorspace_change false print.tmp.printerfeatures.EPSON_EP-805A_Series.supports_downloadfonts_change false print.tmp.printerfeatures.EPSON_EP-805A_Series.supports_jobtitle_change false print.tmp.printerfeatures.EPSON_EP-805A_Series.supports_orientation_change true print.tmp.printerfeatures.EPSON_EP-805A_Series.supports_paper_size_change true print.tmp.printerfeatures.EPSON_EP-805A_Series.supports_plex_change false print.tmp.printerfeatures.EPSON_EP-805A_Series.supports_printincolor_change true print.tmp.printerfeatures.EPSON_EP-805A_Series.supports_resolution_change false print.tmp.printerfeatures.EPSON_EP-805A_Series.supports_spoolercommand_change false privacy.sanitize.migrateFx3Prefs true Graphics Adapter Description X.Org -- Gallium 0.4 on AMD CAICOS Device ID Gallium 0.4 on AMD CAICOS Driver Version 2.1 Mesa 8.0.5 GPU Accelerated Windows 1/1 OpenGL Vendor ID X.Org WebGL Renderer X.Org -- Gallium 0.4 on AMD CAICOS AzureCanvasBackend cairo AzureContentBackend none AzureFallbackCanvasBackend none JavaScript Incremental GC true Accessibility Activated false Prevent Accessibility 0 Library Versions Expected minimum version Version in use NSPR 4.9.6 4.9.6 NSS 3.14.3.0 Basic ECC 3.14.3.0 Basic ECC NSSSMIME 3.14.3.0 Basic ECC 3.14.3.0 Basic ECC NSSSSL 3.14.3.0 Basic ECC 3.14.3.0 Basic ECC NSSUTIL 3.14.3.0 3.14.3.0
I found Firefox crashes on Windows 8 by the same procedure. Crash report is bp-bf06e992-e082-4202-857d-fc3782130317 .
Blocks: 850517
Component: General → DOM
Product: Firefox → Core
I think it's fixed in the next Nightly by bug 850517.
Crash Signature: [@ nsGlobalWindow::GetLength()] → [@ nsGlobalWindow::GetLength()] [@ nsWindowSH::GlobalScopePolluterNewResolve(JSContext*, JS::Handle<JSObject*>, JS::Handle<int>, unsigned int, JS::MutableHandle<JSObject*>) ]
Keywords: reproducible
OS: Linux → All
Summary: crash in nsGlobalWindow::GetLength → crash in nsWindowSH::GlobalScopePolluterNewResolve
Based on crash stats, the regression range is: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=8f5b1f9f5804&tochange=0b052daa913c It's #1 top crasher in today's build.
Crash Signature: [@ nsGlobalWindow::GetLength()] [@ nsWindowSH::GlobalScopePolluterNewResolve(JSContext*, JS::Handle<JSObject*>, JS::Handle<int>, unsigned int, JS::MutableHandle<JSObject*>) ] → [@ nsGlobalWindow::GetLength()] [@ nsWindowSH::GlobalScopePolluterNewResolve(JSContext*, JS::Handle<JSObject*>, JS::Handle<int>, unsigned int, JS::MutableHandle<JSObject*>) ] [@ nsWindowSH::GlobalScopePolluterNewResolve(JSContext*, JS::Handle<JSObject*>…
Keywords: regression, topcrash
Version: unspecified → 22 Branch
Reproduce on Nightly-20130317030923/WinVista(32) bp-4a308da3-75fa-472d-bc13-d1ecb2130317
Crash Report: bp-a2c79fb4-ff06-43f8-b98b-9e7e42130317 Mozilla/5.0 (Windows NT 6.2; Win64; x64; rv:22.0) Gecko/20130317 Firefox/22.0 hg: 0b052daa913c
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → DUPLICATE
I confirmed to fix this problem by my own build today. Thanks.
There are still crashes in 22.0a1/20130320 with a slightly different stack trace.
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
(In reply to Scoobidiver from comment #10) > There are still crashes in 22.0a1/20130320 with a slightly different stack > trace. Can you link to the stack?
(In reply to Bobby Holley (:bholley) from comment #11) > Can you link to the stack? Yes. Signature nsWindowSH::GlobalScopePolluterNewResolve(JSContext*, JS::Handle<JSObject*>, JS::Handle<int>, unsigned int, JS::MutableHandle<JSObject*>) More Reports Search UUID bee59ddc-154b-4974-9e6a-e75812130320 Date Processed 2013-03-20 17:14:35 Uptime 10 Last Crash 19 seconds before submission Install Age 2.0 minutes since version was first installed. Install Time 2013-03-20 17:12:32 Product Firefox Version 22.0a1 Build ID 20130320031103 Release Channel nightly OS Windows NT OS Version 6.1.7601 Service Pack 1 Build Architecture x86 Build Architecture Info GenuineIntel family 6 model 37 stepping 2 Crash Reason EXCEPTION_ACCESS_VIOLATION_READ Crash Address 0x0 App Notes Cisco VPN AdapterVendorID: 0x10de, AdapterDeviceID: 0x10c3, AdapterSubsysID: 13023842, AdapterDriverVersion: 9.18.13.1106 D2D? D2D+ DWrite? DWrite+ D3D10 Layers? D3D10 Layers+ Processor Notes sp-processor03.phx1.mozilla.com_30808:2008 EMCheckCompatibility True Adapter Vendor ID 0x10de Adapter Device ID 0x10c3 Total Virtual Memory 4294836224 Available Virtual Memory 3908911104 System Memory Use Percentage 46 Available Page File 26040205312 Available Physical Memory 9128710144 Frame Module Signature Source 0 xul.dll nsWindowSH::GlobalScopePolluterNewResolve dom/base/nsDOMClassInfo.cpp:3619 1 mozjs.dll js::LookupName js/src/jsobj.cpp:3561 2 mozjs.dll js::NameOperation js/src/jsinterpinlines.h:464 3 mozjs.dll js::Interpret js/src/jsinterp.cpp:2516 4 mozjs.dll js::RunScript js/src/jsinterp.cpp:333 5 mozjs.dll js::RunScript js/src/jsinterp.cpp:341 6 mozjs.dll js::InvokeKernel js/src/jsinterp.cpp:398 7 mozjs.dll js::Invoke js/src/jsinterp.h:135 8 mozjs.dll js_fun_call js/src/jsfun.cpp:876 9 mozjs.dll js::InvokeKernel js/src/jsinterp.cpp:384 10 mozjs.dll js::Interpret js/src/jsinterp.cpp:2396 11 mozjs.dll js::RunScript js/src/jsinterp.cpp:341 12 mozjs.dll js::InvokeKernel js/src/jsinterp.cpp:398 13 mozjs.dll js::Invoke js/src/jsinterp.cpp:431 14 mozjs.dll JS_CallFunctionValue js/src/jsapi.cpp:5750 15 xul.dll nsXPCWrappedJSClass::CallMethod js/xpconnect/src/XPCWrappedJSClass.cpp:1433 16 xul.dll nsXPCWrappedJS::CallMethod js/xpconnect/src/XPCWrappedJS.cpp:578 17 xul.dll PrepareAndDispatch xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp:85 18 xul.dll SharedStub xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp:112 19 xul.dll nsTimerImpl::Fire xpcom/threads/nsTimerImpl.cpp:546 20 winmm.dll timeGetTime 21 xul.dll nsTimerEvent::Run xpcom/threads/nsTimerImpl.cpp:630 22 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:627 23 xul.dll NS_ProcessNextEvent_P obj-firefox/xpcom/build/nsThreadUtils.cpp:238 24 xul.dll nsThread::Shutdown xpcom/threads/nsThread.cpp:474 25 xul.dll nsHtml5ParserThreadTerminator::Observe parser/html/nsHtml5Module.cpp:101 26 xul.dll nsObserverService::NotifyObservers xpcom/ds/nsObserverService.cpp:161 27 xul.dll mozilla::ShutdownXPCOM xpcom/build/nsXPComInit.cpp:562 28 xul.dll ScopedXPCOMStartup::~ScopedXPCOMStartup toolkit/xre/nsAppRunner.cpp:1122 29 xul.dll XREMain::XRE_main toolkit/xre/nsAppRunner.cpp:3972 30 xul.dll XRE_main toolkit/xre/nsAppRunner.cpp:4161 31 firefox.exe do_main browser/app/nsBrowserApp.cpp:228 More reports at: https://crash-stats.mozilla.com/report/list?signature=nsWindowSH%3A%3AGlobalScopePolluterNewResolve%28JSContext*%2C+JS%3A%3AHandle%3CJSObject*%3E%2C+JS%3A%3AHandle%3Cint%3E%2C+unsigned+int%2C+JS%3A%3AMutableHandle%3CJSObject*%3E%29
This appears to be a shutdown crash.
Attachment #727281 - Flags: review?(bzbarsky)
Comment on attachment 727281 [details] [diff] [review] Null-check XPConnect() in nsWindowSH::GlobalScopePolluterNewResolve. v1 r=me with JS_TRUE.
Attachment #727281 - Flags: review?(bzbarsky) → review+
(In reply to Boris Zbarsky (:bz) from comment #14) > r=me with JS_TRUE. Per-IRC, this is contrary to modern spidermonkey style: https://wiki.mozilla.org/JavaScript:SpiderMonkey:C%2B%2B_Coding_Style#Boolean_Types https://hg.mozilla.org/integration/mozilla-inbound/rev/7134a31534be
Crash Signature: , JS::Handle<JSObject*>, JS::Handle<__int64>, unsigned int, JS::MutableHandle<JSObject*>) ] → , JS::Handle<JSObject*>, JS::Handle<__int64>, unsigned int, JS::MutableHandle<JSObject*>) ] [@ nsWindowSH::GlobalScopePolluterNewResolve(JSContext*, JS::Handle<JSObject*>, JS::Handle<long>, unsigned int, JS::MutableHandle<JSObject*>) ]
Status: REOPENED → RESOLVED
Closed: 13 years ago13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Can someone take a look at Bug 858639 if it might be a regression from this bug here? It's a problem with the browser-chrome test on SeaMonkey testbox, this assertion appears right after start up: ###!!! ASSERTION: This is not supposed to fail!: 'Error', file e:/builds/slave/c -cen-t-w32-dbg/build/mozilla/js/xpconnect/src/nsXPConnect.cpp, line 924 nsXPConnect::GetWrappedNativePrototype(JSContext *,JSObject *,nsIClassInfo *,nsI XPConnectJSObjectHolder * *) [js/xpconnect/src/nsXPConnect.cpp:1703] [...] The assertion appears when code in browser-test.js tries to access Object.keys(window) after starting the browser. I managed to track down the regression range to one m-i->m-c merge changeset (and this bug here was included in it, but it's just a guess though). Or is this bug here rather unlikely to have to do with that? See Comment 0 in that bug for regression range and Comment 9 for full assertion stack trace. Unfortunately I was not able to back this out locally as using the *.tests.zip file from buildbot together with a local build does not work fine (not sure why).
This bug was a simple null check, so I doubt it regressed anything. Maybe you want bug 850517?
Thanks for the reply, I found out Bug 604039 (DOM Gamepad API) caused this (I found a way to test this locally after all). I guess comm-central configure.in and/or our package manifest needs to be fixed.
Mozilla/5.0 (Windows NT 6.1; rv:22.0) Gecko/20100101 Firefox/22.0 Build ID: 20130618035212 Verified as fixed on Firefox 22 RC1 - Firefox does not crash when using the steps from the description. Checked also the Socorro reports and I found 2 crashes on Firefox 22 beta for the first signature. Considering the low volume of the crash reports, I'm setting the tracking flag for firefox 22 to verified.
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: