Bug 851887 - Null-check XPConnect() in nsWindowSH::GlobalScopePolluterNewResolve. r=bz